--- a/index.html
+++ b/index.html
@@ -24,18 +24,17 @@
     <link rel="manifest" href="/site.webmanifest">
     <title>Nikoo Homes</title>
        
-    <!-- Google tag (gtag.js) -->
-    
-
+   
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-W8TYJE4XV2"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LGQBNYQYN2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-W8TYJE4XV2');
+  gtag('config', 'G-LGQBNYQYN2');
 </script>
+
 
   
 
