--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     
 
     <link rel="apple-touch-icon" sizes="180x180" href="./src/navbar/images.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./src/navbar/images.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./src/navbar//images.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/navbar/images.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/navbar/images.png">
     <link rel="manifest" href="/site.webmanifest">
     <title>Nikoo Homes</title>
        
