--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
        
    
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LGQBNYQYN2"></script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8SHGLFRQLR"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-LGQBNYQYN2');
+  gtag('config', 'G-8SHGLFRQLR');
 </script>
 
 
