--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 <!-- Google tag (gtag.js) -->
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8SHGLFRQLR"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LGQBNYQYN2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-8SHGLFRQLR');
+  gtag('config', 'G-LGQBNYQYN2');
 </script>
 
 
